connect to db, getall,add,getbyId

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "default": "Server=localhost;database=Registrar;Uid=root;Pwd=CTS8250;"
   }
 }
